--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://placehold.co/16x16/ff69b4/ffffff?text=%E2%9D%A4">
+    <link rel="icon" type="image/png" href="heart.png">
     <title>FOR MY BABY</title>
     <style>
         body, html {
@@ -341,3 +341,4 @@ Your Sweetheart
     </script>
 </body>
 </html>
+
